# UAVSPS

./: .gitignore  README.md  app.js  genetic_algorithm.py
controller_base/: AlgoritmoMTSP.py  CMakeLists.txt  UAV.py  algoritmo.ipynb  algoritmo.py  controller_base.py  req_rep.py  subscribe.py  utils.py
controller_base/detection/: detect.py  opencv_boundingbox.py
controller_base/detection/images/: publish.py
controller_base/img/: diagrama_algoritmo.xml
controller_base/include/: CMakeLists.txt
controller_base/include/Algorithm/: Algorithm.h
controller_base/src/: CMakeLists.txt  main.cpp
controller_base/src/Algorithm/: Algorithm.cpp
controller_node/mavros/: CMakeLists.txt
controller_node/mavros/catkin_ws/devel/: _setup_util.py
controller_node/mavros/catkin_ws/devel/lib/ex1/: takeoff_n_land
controller_node/mavros/catkin_ws/devel/lib/pkgconfig/: ex1.pc
controller_node/mavros/catkin_ws/devel/share/ex1/cmake/: ex1Config.cmake
controller_node/mavros/catkin_ws/src/ex1/: CMakeLists.txt  ControlWaypoints.cpp  package.xml
controller_node/mavros/ros/kinetic/include/actionlib/: TestAction.h  TestActionFeedback.h  TestActionGoal.h  TestActionResult.h  TestFeedback.h  TestGoal.h  TestRequestAction.h  TestRequestActionFeedback.h  TestRequestActionGoal.h  TestRequestActionResult.h  TestRequestFeedback.h  TestRequestGoal.h  TestRequestResult.h  TestResult.h  TwoIntsAction.h  TwoIntsActionFeedback.h  TwoIntsActionGoal.h  TwoIntsActionResult.h  TwoIntsFeedback.h  TwoIntsGoal.h  TwoIntsResult.h
controller_node/mavros/ros/kinetic/include/bond/: Constants.h  Status.h
controller_node/mavros/ros/kinetic/include/geographic_msgs/: BoundingBox.h  GeoPath.h  GeoPoint.h  GeoPointStamped.h  GeoPose.h  GeoPoseStamped.h  GeographicMap.h  GeographicMapChanges.h  GetGeoPathRequest.h  GetGeoPathResponse.h  GetGeographicMapRequest.h  GetGeographicMapResponse.h  GetRoutePlanRequest.h  GetRoutePlanResponse.h  KeyValue.h  MapFeature.h  RouteNetwork.h  RoutePath.h  RouteSegment.h  UpdateGeographicMapRequest.h  UpdateGeographicMapResponse.h  WayPoint.h
controller_node/mavros/ros/kinetic/include/mavconn/: mavlink_dialect.h
controller_node/mavros/ros/kinetic/include/mavlink/: config.h
controller_node/mavros/ros/kinetic/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandIntRequest.h  CommandIntResponse.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  ExtendedState.h  FileChecksumRequest.h  FileChecksumResponse.h  FileCloseRequest.h  FileCloseResponse.h  FileEntry.h  FileListRequest.h  FileListResponse.h  FileMakeDirRequest.h  FileMakeDirResponse.h  FileOpenRequest.h  FileOpenResponse.h  FileReadRequest.h  FileReadResponse.h  FileRemoveDirRequest.h  FileRemoveDirResponse.h  FileRemoveRequest.h  FileRemoveResponse.h  FileRenameRequest.h  FileRenameResponse.h  FileTruncateRequest.h  (+46 more)
controller_node/mavros/ros/kinetic/include/nav_msgs/: GetMapAction.h  GetMapActionFeedback.h  GetMapActionGoal.h  GetMapActionResult.h  GetMapFeedback.h  GetMapGoal.h  GetMapRequest.h  GetMapResponse.h  GetMapResult.h  GetPlanRequest.h  GetPlanResponse.h  GridCells.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h  SetMapRequest.h  SetMapResponse.h
controller_node/mavros/ros/kinetic/include/tf2_msgs/: FrameGraphRequest.h  FrameGraphResponse.h  LookupTransformAction.h  LookupTransformActionFeedback.h  LookupTransformActionGoal.h  LookupTransformActionResult.h  LookupTransformFeedback.h  LookupTransformGoal.h  LookupTransformResult.h  TF2Error.h  TFMessage.h
controller_node/mavros/ros/kinetic/include/uuid_msgs/: UniqueID.h
controller_node/mavros/ros/kinetic/lib/: liborocos-kdl.so.1.3
controller_node/mavros/ros/kinetic/lib/mavros/: gcs_bridge  mavros_node
controller_node/mavros/ros/kinetic/lib/pkgconfig/: eigen_conversions.pc  libmavconn.pc  mavlink.pc  mavros.pc  mavros_msgs.pc
controller_node/mavros/ros/kinetic/lib/python2.7/dist-packages/: mavros-0.21.0.egg-info  tf2_py-0.5.16.egg-info  (+1 more)
controller_node/mavros/ros/kinetic/lib/tf2_ros/: buffer_server  static_transform_publisher
controller_node/mavros/to_rpi_guided/: CMakeLists.txt  package.xml
controller_node/mavros/to_rpi_guided/src/: apm_modes.h  client_waypoints_fotos.cpp  client_waypoints_fotos.h  cliente.cpp  main.cpp  publisher_gps_fotos.cpp  publisher_gps_fotos.h  structs.h
controller_node/mavros/torpi/: CMakeLists.txt  package.xml
controller_node/mavros/torpi/pablo/: Publicador  Publicador.cpp  Suscriptor  Suscriptor.cpp  raspicam.cpp  raspicam.cpp.save  raspicam_image.ppm  raspicammmm
controller_node/mavros/torpi/src/: client_waypoints_fotos.cpp  client_waypoints_fotos.h  main.cpp  publisher_gps_fotos.cpp  publisher_gps_fotos.h  wuclient.cpp
www/: app.js  (+5 more)
(+169 files in other folders)
